2006-08-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/todo.texi: added todo file
	* doc/manual/bugs.texi: added bugs file

2006-08-25  Brian Bidulock  <bidulock@openss7.org>

        * am/release.am: added new release control file
	* doc/manual/descrip.texi: added short description file

2006-08-24  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/STREAMS.texi: some improvements to documentation
	* Makefile.am: automating release files
	* doc/manual/Makefile.am: automating release files
	* doc/manual/SPG.texi: automating release files
	* doc/manual/SPG2.texi: automating release files
	* doc/manual/STREAMS.texi: automating release files
	* doc/manual/STREAMS_FAQ.texi: automating release files
	* doc/manual/porting.texi: automating release files
	* doc/manual/prerequisites.texi: automating release files
	* doc/manual/releases.texi: automating release files
	* doc/manual/texi/quick.texi: automating release files
	* scripts/texi/macros.texi: automating release files
	* scripts/texi/versions.texi: automating release files

2006-08-23  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: updated
	* doc/manual/SPG.texi: correction
	* doc/manual/STREAMS.texi: added preface
	* doc/manual/releases.texi: updated for release
	* scripts/texi/funding.texi: correction
	* src/modules/sc.c: rationalized to strutil module
	* am/kernel.am: handle empty kernel module lists
	* .cvsignore: better ignoring
	* doc/manual/.cvsignore: better ignoring
	* scripts/texi/funding.texi: correction
	* src/modules/sth.c: cvs checkin

2006-08-22  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/compat.texi: created common compatibility text
	* scripts/texi/macros.texi: created common macros file
	* NEWS: updated for release
	* doc/man/Makefile.am: macros and compat dependecies
	* doc/man/man1/strreset.1.man: corrections
	* doc/man/man8/insf.8.man: corrections
	* doc/man/man8/specfs.8.man: added init script manpage
	* doc/man/man8/specfs.sh.8.man:added init script manpage