@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: drv_hztomsec.9.man,v 0.9.2.21 2006/04/05 09:44:10 brian Exp $
+.\" @(#) $Id: drv_hztomsec.9.man,v 0.9.2.22 2006/09/01 08:45:47 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/04/05 09:44:10 $ by $Author: brian $
+.\" Last Modified $Date: 2006/09/01 08:45:47 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: drv_hztomsec.9.man,v $
+.\" Revision 0.9.2.22  2006/09/01 08:45:47  brian
+.\" - bug fixes reported by Neil Fagan
+.\"
 .\" Revision 0.9.2.21  2006/04/05 09:44:10  brian
 .\" - moved .so line and updated headers
 .\"
