@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: ddi.h,v 0.9.2.37 2006/07/24 09:01:12 brian Exp $
+ @(#) $Id: ddi.h,v 0.9.2.38 2006/09/01 08:45:48 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -44,11 +44,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/07/24 09:01:12 $ by $Author: brian $
+ Last Modified $Date: 2006/09/01 08:45:48 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: ddi.h,v $
+ Revision 0.9.2.38  2006/09/01 08:45:48  brian
+ - bug fixes reported by Neil Fagan
+
  Revision 0.9.2.37  2006/07/24 09:01:12  brian
  - results of udp2 optimizations
 
@@ -63,7 +66,7 @@
 #ifndef __SYS_STREAMS_DDI_H__
 #define __SYS_STREAMS_DDI_H__ 1
 
-#ident "@(#) $RCSfile: ddi.h,v $ $Name:  $($Revision: 0.9.2.37 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: ddi.h,v $ $Name:  $($Revision: 0.9.2.38 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
 
 #ifndef __SYS_DDI_H__
 #warning "Do no include sys/streams/ddi.h directly, include sys/ddi.h instead."
