@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: stream.h,v 0.9.2.89 2006/07/25 06:39:06 brian Exp $
+ @(#) $Id: stream.h,v 0.9.2.90 2006/09/01 08:45:48 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -44,11 +44,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/07/25 06:39:06 $ by $Author: brian $
+ Last Modified $Date: 2006/09/01 08:45:48 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: stream.h,v $
+ Revision 0.9.2.90  2006/09/01 08:45:48  brian
+ - bug fixes reported by Neil Fagan
+
  Revision 0.9.2.89  2006/07/25 06:39:06  brian
  - expanded minor device numbers and optimization and locking corrections
 
@@ -86,7 +89,7 @@
 #ifndef __SYS_STREAMS_STREAM_H__
 #define __SYS_STREAMS_STREAM_H__ 1
 
-#ident "@(#) $RCSfile: stream.h,v $ $Name:  $($Revision: 0.9.2.89 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: stream.h,v $ $Name:  $($Revision: 0.9.2.90 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
 
 #ifndef __SYS_STREAM_H__
 #warning "Do no include sys/streams/stream.h directly, include sys/stream.h instead."
